--- a/DeductionAutomator/Views/Shared/_Layout.cshtml
+++ b/DeductionAutomator/Views/Shared/_Layout.cshtml
@@ -26,13 +26,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">DeductionAutomator</a>
+                <a asp-area="" asp-controller="Deduction" asp-action="Index" class="navbar-brand">DeductionAutomator</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="Deduction" asp-action="Index">EmployeeDeductions</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
