Added get started button to home page

--- a/DeductionAutomator/Views/Home/Index.cshtml
+++ b/DeductionAutomator/Views/Home/Index.cshtml
@@ -4,13 +4,13 @@
 
 <div>
     <div class="centered-content">
-        <p id="header-text">Welcome to Deduction Automator!</p>
-        <p id="info-text">This tool will automate the process for
+        <p class="header-text">Welcome to Deduction Automator!</p>
+        <p class="info-text">This tool will automate the process for
             figuring out your employees deductions. It's a convenient
             way to enter your employees and declare their dependents,
             and we will show you exactly how much money you should take
             out for deductions.
         </p>
-        
+        <p><a class="ghost-button" asp-controller="Deduction" asp-action="Index">Get Started</a><</p>
     </div>
 </div>
