--- a/DeductionAutomator/Views/Home/Index.cshtml
+++ b/DeductionAutomator/Views/Home/Index.cshtml
@@ -11,6 +11,6 @@
             and we will show you exactly how much money you should take
             out for deductions.
         </p>
-        <p><a class="ghost-button" asp-controller="Deduction" asp-action="Index">Get Started</a><</p>
+        <p><a class="ghost-button" asp-controller="Deduction" asp-action="Index">Get Started</a></p>
     </div>
 </div>
