--- a/DeductionAutomator/Views/Account/Login.cshtml
+++ b/DeductionAutomator/Views/Account/Login.cshtml
@@ -9,9 +9,9 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"]</h2>
-<div class="row">
+<div class="row center-content">
     <div class="col-md-4">
+        <h2>@ViewData["Title"]</h2>
         <section>
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
                 <h4>Use a local account to log in.</h4>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-default">Log in</button>
+                    <button type="submit" class="ghost-button info-text">Log in</button>
                 </div>
                 <div class="form-group">
                     <p>
