Added edit and delete buttons to the table rows

--- a/DeductionAutomator/Views/Deduction/Index.cshtml
+++ b/DeductionAutomator/Views/Deduction/Index.cshtml
@@ -22,6 +22,8 @@
         <td>@entry.EmployeeName</td>
         <td>@entry.YearlyDeduction</td>
         <td>@entry.Dependents</td>
+        <td><button>Edit</button></td>
+        <td><button>Delete</button></td>
       </tr>
     }
   </table>
