--- a/DeductionAutomator/Views/Home/Index.cshtml
+++ b/DeductionAutomator/Views/Home/Index.cshtml
@@ -3,14 +3,14 @@
 }
 
 <div>
-    <div>
+    <div id="home-content">
         <p class="header-text centered-text">Welcome to Deduction Automator</p>
-        <p class="info-text">This tool will automate the process for
+        <p class="info-text body-text">This tool will automate the process for
             figuring out your employees deductions. It's a convenient
             way to enter your employees and declare their dependents,
             and we will show you exactly how much money you should take
             out for deductions.
         </p>
-        <p class="centered-text"><a class="ghost-button info-text" asp-controller="Deduction" asp-action="Index">Get Started</a></p>
+        <p class="centered-text extra-margin-top"><a class="ghost-button info-text" asp-controller="Deduction" asp-action="Index">Get Started</a></p>
     </div>
 </div>
