Updated table yearly dependent to have currency format

--- a/DeductionAutomator/Views/Deduction/Index.cshtml
+++ b/DeductionAutomator/Views/Deduction/Index.cshtml
@@ -20,7 +20,7 @@
     {
       <tr>
         <td>@entry.EmployeeName</td>
-        <td>@entry.YearlyDeduction</td>
+        <td>@entry.YearlyDeduction.ToString("C")</td>
         <td>@entry.Dependents</td>
         <td><button class="edit-button">Edit</button></td>
         <td><button class="delete-button">Delete</button></td>
