--- a/DeductionAutomator/Views/Deduction/Index.cshtml
+++ b/DeductionAutomator/Views/Deduction/Index.cshtml
@@ -11,7 +11,8 @@
     <thead>
       <tr>
         <td><strong>Employee Name:</strong></td>
-        <td><strong>Deduction:</strong></td>
+        <td><strong>Yearly Deduction:</strong></td>
+        <td><strong>Per Paycheck Deduction:</strong></td>
         <td><strong>Dependents:</strong></td>
       </tr>
     </thead>
@@ -21,6 +22,7 @@
       <tr>
         <td>@entry.EmployeeName</td>
         <td>@entry.YearlyDeduction.ToString("C")</td>
+        <td>@entry.PaycheckDeduction.ToString("C")</td>
         <td>@entry.Dependents</td>
         <td><button class="edit-button">Edit</button></td>
         <td><button class="delete-button">Delete</button></td>
