--- a/DeductionAutomator/wwwroot/css/site.css
+++ b/DeductionAutomator/wwwroot/css/site.css
@@ -103,3 +103,8 @@ div.deduction-panel {
   max-width: 75%;
   margin: auto;
 }
+
+/* ----- TABLE STYLING ----- */
+.table-row td {
+  font-size: 16px;
+}
