Redirected user flow to add a new entry.

--- a/DeductionAutomator/Views/Deduction/Index.cshtml
+++ b/DeductionAutomator/Views/Deduction/Index.cshtml
@@ -31,6 +31,6 @@
   </table>
 
   <div class="panel-footer add-item-form">
-    @await Html.PartialAsync("AddDeductionEntryPartial", new DeductionEntry())
+    <p class="centered-text"><a class="ghost-button info-text" asp-controller="Deduction" asp-action="AddDeductionForm">Add Entry</a></p>
   </div>
 </div>
