Edit form now sends the user to a prefilled form that they can edit

--- a/DeductionAutomator/Views/Deduction/Index.cshtml
+++ b/DeductionAutomator/Views/Deduction/Index.cshtml
@@ -12,7 +12,7 @@
       <tr class="table-row">
         <td><strong>Employee Name:</strong></td>
         <td><strong>Yearly Deduction:</strong></td>
-        <td><strong>Per Paycheck Deduction:</strong></td>
+        <td><strong>Deduction Per Paycheck:</strong></td>
         <td><strong>Dependents:</strong></td>
       </tr>
     </thead>
@@ -30,7 +30,7 @@
     }
   </table>
 
-  <div class="panel-footer add-item-form">
+  <div class="panel-footer">
     <p class="centered-text"><a class="ghost-button info-text" asp-controller="Deduction" asp-action="AddDeductionForm">Add Entry</a></p>
   </div>
 </div>
