--- a/DeductionAutomator/Views/Deduction/EditDeductionEntry.cshtml
+++ b/DeductionAutomator/Views/Deduction/EditDeductionEntry.cshtml
@@ -12,6 +12,8 @@
         <input asp-for="EmployeeName" value="@Model.EmployeeName">
         <label asp-for="Dependents">Dependents:</label>
         <input asp-for="Dependents" value="@Model.Dependents">
+        <input asp-for="Id" type="hidden">
+        <input asp-for="UserId" type="hidden">
         <button type="submit">Update</button>
       </form> 
     </div>
