Simplified some BO logic in services, and round corners of buttons a bit more

--- a/DeductionAutomator/Views/Deduction/AddDeductionForm.cshtml
+++ b/DeductionAutomator/Views/Deduction/AddDeductionForm.cshtml
@@ -13,7 +13,7 @@
         <input asp-for="EmployeeName">
         <label asp-for="Dependents">Dependents:</label>
         <input asp-for="Dependents">
-        <button type="submit">Add</button>
+        <button class="add-button" type="submit">Add</button>
       </form> 
     </div>
   </div>
