--- a/DeductionAutomator/Views/Deduction/EditDeductionEntry.cshtml
+++ b/DeductionAutomator/Views/Deduction/EditDeductionEntry.cshtml
@@ -14,7 +14,7 @@
         <input asp-for="Dependents" value="@Model.Dependents">
         <input asp-for="Id" type="hidden">
         <input asp-for="UserId" type="hidden">
-        <button type="submit">Update</button>
+        <button class="update-button" type="submit">Update</button>
       </form> 
     </div>
 </div>
