--- a/DeductionAutomator/wwwroot/css/site.css
+++ b/DeductionAutomator/wwwroot/css/site.css
@@ -54,8 +54,12 @@ div.deduction-panel {
 }
 
 .edit-button,
-.edit-button:hover {
-  border-radius: 5%;
+.update-button,
+.add-button,
+.edit-button:hover,
+.update-button:hover,
+.add-button:hover {
+  border-radius: 10%;
   background-color: #4caf50;
   color: #fff;
   padding: 10px;
@@ -66,7 +70,7 @@ div.deduction-panel {
 
 .delete-button,
 .delete-button:hover {
-  border-radius: 5%;
+  border-radius: 10%;
   background-color: #f44336;
   color: #fff;
   padding: 10px;
