--- a/DeductionAutomator/Views/Deduction/AddDeductionForm.cshtml
+++ b/DeductionAutomator/Views/Deduction/AddDeductionForm.cshtml
@@ -8,7 +8,7 @@
   <div class="col-md-4">
     <h2>@ViewData["Title"]</h2>
     <div>
-      <form asp-action="AddDeductionEntry" asp-controller="Deduction" method="POST">
+      <form class="vertical-form" asp-action="AddDeductionEntry" asp-controller="Deduction" method="POST">
         <label asp-for="EmployeeName">Employee Name:</label>
         <input asp-for="EmployeeName">
         <label asp-for="Dependents">Dependents:</label>
